双重检查锁的改进

--- a/Java/JVM/锁机制.md
+++ b/Java/JVM/锁机制.md
@@ -44,4 +44,75 @@
 对一个volatile域的写，happens-before于任意后续对这个volatile域的读。  
 + **传递性规则**  
 如果A happens-before B，且B happens-before C，那么A happens-before C。
++ **start()规则**  
+如果线程A执行操作ThreadB.start()，那么A线程的ThreadB.start()操作happens-before于线程B中的任意操作。  
++ **join()规则**  
+如果线程A执行操作ThreadB.join()并成功返回，那么线程B中的任意操作happens-before于线程A从ThreadB.join()操作成功返回。  
+
+# 双重检查锁定与延迟初始化
+```java
+public class DoubleCheckedLocking {
+  private static Instance instance;
+  
+  public static Instance getInstance() {
+    if (instance == null) {
+	  synchronized (DoubleCheckedLocking.class) {
+	    if (instance == null) instance = new Instance();
+	  }
+	}
+	return instance;
+  }
+}
+```
+### 一、问题根源
+在`instance = new Instance()`创建对象时，指令可能被重排序，导致先设置内存地址分配在进行初始化对象。在这种情况下，多线程可能仅读取了instance的内存地址及默认值。  
+
+### 二、基于volatile的解决方案
+通过把instance声明为volatile型，实现线程安全的延迟初始化。这种方案是通过禁止分配内存地址和初始化对象的重排序实现的。  
+```java
+public class DoubleCheckedLocking {
+  private volatile static Instance instance;
+  
+  public static Instance getInstance() {
+    if (instance == null) {
+	  synchronized (DoubleCheckedLocking.class) {
+	    if (instance == null) instance = new Instance();
+	  }
+	}
+	return instance;
+  }
+}
+```
+
+### 三、基于类初始化的解决方案
+JVM在类的初始化阶段(即在Class被加载后，且被线程使用之前)，会执行类的初始化。在这期间，JVM会去获取一个锁，以同步多个线程对同一个类的初始化。  
+```java
+public class InstanceFactory {
+  private static class InstanceHolder {
+    public static Instance instance = new Instance();
+  }
+  
+  public static Instance getInstance() {
+    return InstanceHolder.instance; // 导致InstanceHolder类被初始化
+  }
+}
+```
+这种方案下，初始化对象和分配内存地址可以重排序，但不允许非构造线程看到这个重排序。  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
