--- a/Java/Java并发/锁.md
+++ b/Java/Java并发/锁.md
@@ -1,4 +1,6 @@
-## 队列同步器(AbstractQueuedSynchronizer)
+# 队列同步器(AbstractQueuedSynchronizer)
+
+## 一、队列同步器的接口与示例  
 队列同步器是用来构建锁或者其他同步组件的基础框架，使用一个int成员变量标识同步状态，通过内置的FIFO队列来完成资源获取线程的排队工作。  
 
 同步器的主要使用方式是继承，子类通过继承同步器并实现它的抽象方法来管理同步状态：
@@ -6,4 +8,217 @@
 + `setState(int newState)`：设置当前同步状态；
 + `compareAndSetState(int expect, int update)`：使用CAS设置当前状态，能够保证状态设置的原子性。  
 
-同步器子类推荐被定义为自定义同步组件的静态内部类。
+同步器子类推荐被定义为自定义同步组件的静态内部类。同步器可重写的方法为：  
+
+| 方法名称 | 描述 |  
+| -- | -- |  
+| `protected boolean tryAcquire(int arg)` | 独占式获取同步状态，实现该方法需要查询当前状态并判断同步状态是否符合预期，然后再进行CAS设置同步状态 | 
+| `protected boolean tryRelease(int arg)` | 独占式释放同步状态，等待获取同步状态的线程将有机会获取同步状态 | 
+| `protected int tryAcquireShared(int arg)` | 共享式获取同步状态，返回大于等于0的值，表示获取成功，反之，获取失败 | 
+| `protected boolean tryReleaseShared(int arg)` | 共享式释放同步状态 | 
+| `protected boolean isHeldExclusively()` | 当前同步器是否在独占模式下被线程占用，一般该方法表示是否被当前线程所独占 |   
+
+同步器提供的模板方法包括：**独占式获取与释放同步状态**、**共享式获取与释放同步状态**和**查询同步队列中的等待线程情况**。自定义同步组件将使用同步器提供的模板方法来实现自己的同步语义。  
+
+## 二、队列同步器实现分析
+
+### 1. 同步队列
+同步器依赖内部的**同步队列**(FIFO双向队列)来完成同步状态的管理。当前线程获取同步状态失败时，同步器会将当前线程以及等待状态等信息构造成一个节点(Node)并将其放入同步队列，同时会阻塞当前线程；当同步状态释放时，会把首节点中的线程唤醒，使其再次尝试获取同步状态。  
+
+同步队列中的节点(Node)用来保存获取同步状态失败的**线程引用**、**等待状态**以及**前驱和后续节点**。节点的等待状态(waitStatus)包括如下：`CANCELLED`(值为1)、`SIGNAL`(值为-1)、`CONDITION`(值为-2)、`PROPAGATE`(值为-3)、`INITIAL`(值为0，初始状态)。
+
+### 2. 独占式同步状态获取与释放
++ 通过调用同步器的`acquire(int arg)`方法可以获取同步状态，该方法对中断不敏感，即：由于线程获取同步状态失败后进入同步队列中，后续对线程进行中断操作时，线程不会从同步队列中移除。同步器的acquire方法如下：  
+  ```java
+    public final void acquire(int arg) {
+        if (!tryAcquire(arg) &&
+            acquireQueued(addWaiter(Node.EXCLUSIVE), arg))
+            selfInterrupt();
+    }
+  ```
++ 通过调用同步器的`release(int arg)`方法可以释放同步状态，该方法在释放了同步状态后，会唤醒其后续节点。同步器的release方法如下：  
+  ```java
+    public final boolean release(int arg) {
+        if (tryRelease(arg)) {
+            Node h = head;
+            if (h != null && h.waitStatus != 0)
+                unparkSuccessor(h);
+            return true;
+        }
+        return false;
+    }
+  ```
++ 总结：在获取同步状态时，同步器维护一个同步队列，获取状态失败的线程都会被加入到队列中，并在队列中进行自旋；移出队列（或停止自旋）的条件是前驱节点为头节点且成功获取了同步状态。在释放同步状态时，同步器调用`tryRelease(int arg)`方法释放同步状态，然后唤醒头部节点的后续节点。  
+
+### 3. 共享式同步状态获取与释放
++ 通过调用同步器的`acquireShared(int arg)`方法可以共享式地获取同步状态，自旋过程中，成功获取到同步状态并退出自旋的条件是`tryAcquireShared(int arg)`方法返回值大于等于0。代码如下：  
+  ```java
+    public final void acquireShared(int arg) {
+        if (tryAcquireShared(arg) < 0)
+            doAcquireShared(arg);
+    }
+	
+	private void doAcquireShared(int arg) {
+        final Node node = addWaiter(Node.SHARED);
+        boolean failed = true;
+        try {
+            boolean interrupted = false;
+            for (;;) {
+                final Node p = node.predecessor();
+                if (p == head) {
+                    int r = tryAcquireShared(arg);
+                    if (r >= 0) {
+                        setHeadAndPropagate(node, r);
+                        p.next = null; // help GC
+                        if (interrupted)
+                            selfInterrupt();
+                        failed = false;
+                        return;
+                    }
+                }
+                if (shouldParkAfterFailedAcquire(p, node) &&
+                    parkAndCheckInterrupt())
+                    interrupted = true;
+            }
+        } finally {
+            if (failed)
+                cancelAcquire(node);
+        }
+    }
+  ```
++ 通过调用`releaseShared(int arg)`方法可以释放同步状态，在释放同步状态之后，将会唤醒后续处于等待状态的节点。代码如下：  
+  ```java
+    public final boolean releaseShared(int arg) {
+        if (tryReleaseShared(arg)) {
+            doReleaseShared();
+            return true;
+        }
+        return false;
+    }
+  
+  ```
+
+### 4. 独占式超时获取同步状态
+通过调用同步器的`doAcquireNanos(int arg, long nanosTimeout)`方法可以超时获取同步状态，即在指定的时间段内获取同步状态。超时获取同步状态的过程是在支持响应中断(即`acquireInterruptibly(int arg)`)的基础上，增加了超时获取的特性。代码如下：  
+  ```java
+    private boolean doAcquireNanos(int arg, long nanosTimeout)
+            throws InterruptedException {
+        if (nanosTimeout <= 0L)
+            return false;
+        final long deadline = System.nanoTime() + nanosTimeout;
+        final Node node = addWaiter(Node.EXCLUSIVE);
+        boolean failed = true;
+        try {
+            for (;;) {
+                final Node p = node.predecessor();
+                if (p == head && tryAcquire(arg)) {
+                    setHead(node);
+                    p.next = null; // help GC
+                    failed = false;
+                    return true;
+                }
+                nanosTimeout = deadline - System.nanoTime();
+                if (nanosTimeout <= 0L)
+                    return false;
+                if (shouldParkAfterFailedAcquire(p, node) &&
+                    nanosTimeout > spinForTimeoutThreshold)
+                    LockSupport.parkNanos(this, nanosTimeout);
+                if (Thread.interrupted())
+                    throw new InterruptedException();
+            }
+        } finally {
+            if (failed)
+                cancelAcquire(node);
+        }
+    }
+  ```
+
+# LockSupport工具
+`LockSupport`工具定义了一组公共静态方法，提供了最基本的线程阻塞和唤醒功能，其中包含：以`park`开头的一组方法用来阻塞当前线程、`unpark(Thread thread)`方法唤醒一个被阻塞的线程。  
+
+| 方法名称 | 描述 |
+| -- | -- |
+| `void park()`/`void park(Object blocker)` | 阻塞当前线程，如果调用`unpark(Thread thread)`方法或者当前线程被中断，才能从`park()`方法返回 |  
+| `void parkNanos(long nanos)`/`void parkNanos(Object blocker, long nanos)` | 阻塞当前线程，最长不超过nanos纳秒，返回条件在`park()`的基础上增加了超时返回 |  
+| `void parkUtil(long deadline)`/`void parkUtil(Object blocker,long deadline)` | 阻塞当前线程，直到deadline时间 |
+| `unpark(Thread thread)` | 唤醒处于阻塞状态的线程thread |   
+
+添加参数blocker用来标识当前线程在等待的对象（即阻塞对象），该对象主要用于问题排查和系统监控。  
+
+# Condition接口
+Condition接口提供了类似Object的监视器方法，与Lock配合可实现等待/通知模式。  
+
+## 一. Condition定义的方法（部分）
+| 方法名称 | 描述 |  
+| -- | -- |
+| `void await() throws InterruptedException` | 当前线程进入等待状态，直到被通知或中断 |
+| `void awaitUninterruptibly()` | 当前线程进入等待状态，直到被通知，不响应中断 |
+| `long awaitNanos(long nanos) throw InterruptedException` | 当前线程进入等待状态直到被通知、中断或超时，返回值表示剩余时间 |
+| `boolean awaitUntil(Date deadline) throws InterruptedException` | 当前线程进入等待状态指导被通知、中断或者到某个时间，未到指定时间被通知时返回true | 
+| `void signal()` | 唤醒一个等待在Condition上的线程，该线程从等待方法返回前必须获得与Condition相关联的锁 |
+| `void signalAll()` | 唤醒所有等待在Condition上的线程，能够从等待方法返回的线程必须获得与Condition相关联的锁 |
+
+## 二. 实现分析
+> 基于Condition的操作需要获取相关联的锁，ConditionObject作为同步器AbstractQueuedSynchronizer的内部类。  
+
+Condition的实现主要包括：等待队列、等待和通知。  
+
+### 1. 等待队列
+等待队列是一个FIFO的队列，在队列的每个节点都包含了一个线程的引用，该线程是在Condition对象上等待的线程。如果一个线程调用了Condition.await()方法，那么该线程将会释放锁、构造成节点加入等待队列并进入等待状态。  
+> 同步器中的同步队列和等待队列中节点类型都是同步器的静态内部类`AbstractQueuedSynchronizer.Node`。  
+
+一个Condition包含一个等待队列，Condition拥有首节点(firstWaiter)和尾节点(lastWaiter)。新增节点只需要将原有的尾节点nextWaiter指向它，并更新尾节点即可。这阶段更新过程没使用CAS保证，因为调用`await()`方法的线程必定是获取了锁的线程。  
+
+Object的监视器模型上，一个对象拥有一个同步队列和等待队列；并发包中的Lock拥有一个同步队列和多个等待队列。  
+
+Condition的实现是同步器的内部类，因此每个Condition实例都能够访问同步器提供的方法，相当于每个Condition都拥有所属同步器的引用。  
+### 2. 等待
+调用Condition的`await()`方法及以`await`开头的方法，会使当前线程进入等待队列并释放锁，同时线程状态变为等待状态。当从`await()`方法返回时，当前线程一定获取了Condition相关联的锁。  
+
+`await()`方法代码清单：
+  ```java
+    public final void await() throws InterruptedException {
+        if (Thread.interrupted())
+            throw new InterruptedException();
+        // 当前线程构造为新的节点并加入到等待队列
+        Node node = addConditionWaiter();
+        // 释放锁并从同步队列中移除
+        int savedState = fullyRelease(node);
+        int interruptMode = 0;
+        // 判断节点是否在同步队列
+        while (!isOnSyncQueue(node)) {
+            // 线程阻塞等待unpark通知
+            LockSupport.park(this);
+            if ((interruptMode = checkInterruptWhileWaiting(node)) != 0)
+                break;
+        }
+        if (acquireQueued(node, savedState) && interruptMode != THROW_IE)
+            interruptMode = REINTERRUPT;
+        if (node.nextWaiter != null) // clean up if cancelled
+            unlinkCancelledWaiters();
+        if (interruptMode != 0)
+            reportInterruptAfterWait(interruptMode);
+    }
+  ```
+
+
+获取了锁的线程调用`await()`方法之后，会将当前线程构造成节点并加入等待队列中，然后释放同步状态，唤醒同步队列的后续节点，当前线程进入等待状态。  
+
+
+### 3. 通知
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
