--- a/Java/Java并发/02并发容器.md
+++ b/Java/Java并发/02并发容器.md
@@ -42,15 +42,47 @@ Java8中ConcurrentHashMap与Java7的差别：
 ---
 
 # ConcurrentLinkedQueue
+ConcurrentLinkedQueue是一个基于链接节点的无界线程安全队列，采用先进先出的规则对节点进行排序采用了**wait-free算法**(即CAS算法)来实现。  
 
+### 1. 结构  
+ConcurrentLinkedQueue由head节点和tail节点组成，每个节点(Node)由节点元素(item)和指向下一个节点的引用(next)组成。默认情况下head节点存储的元素为空，tail节点等于head节点。  
+```java
+private transient volatile Node<E> tail = head;
+```
 
+### 2. 入队列
+入队列就是将入队节点添加到队列的尾部。主要做两件事：  
++ 将入队节点设置成当前队列尾节点的下一个节点；
++ 更新tail节点，如果tail节点的next节点不为空，则将入队节点设置成tail节点，如果tail节点为空，则将入队节点设置成tail的next节点。
+
+> 所以，**tail节点并不总是尾节点**。通过控制并减少CAS更新tail节点的频率，在tail节点和尾节点的距离大于等于hops值时更新tail节点，提高入队效率。本质上是通过增加对volatile变量的读操作减少对volatile变量的写操作，而写操作开销远远大于读操作，所以入队效率会有所提升。  
+
+### 3. 出队列
+出队列就是从队列里返回一个节点元素，并清空该节点对元素的引用。  
+
+每次出队列时，当head节点里有元素时，直接弹出head节点里的元素，而不会更新head节点。只有当head节点里没有元素时，出队操作才会更新head节点。同样是通过hops变量减少使用CAS更新head节点的消耗，从而提高出队效率。  
 
 --- 
 
 # 阻塞队列
+阻塞队列(Blocking Queue)是一个支持两个附加操作的队列：  
++ 支持阻塞的插入方法：当队列满时，队列会阻塞插入元素的线程，直到队列不满；
++ 支持阻塞的移除方法：在队列为空时，获取元素的线程会等待队列变为非空。  
 
-
-
+| 方法/处理方式 | 抛出异常 | 返回特殊值 | 一直阻塞 | 超时退出 |
+| -- | -- | -- | -- | -- |
+| 插入方法 | `add(e)` | `offer(e)` | `put(e)` | `offer(e, time, unit)` |
+| 移除方法 | `remove()` | `poll()` | `take()` | `poll(time, unit)` |
+| 检查方法 | `element()` | `peek()` | 不可用 | 不可用 |
+ 
+### 1. Java中的阻塞队列
++ `ArrayBlockingQueue`:一个由数组结构组成的有界阻塞队列
++ `LinkedBlockingQueue`:一个由链表结构组成的有界阻塞队列
++ `PriorityBlockingQueue`:一个支持优先级排序的无界阻塞队列
++ `DelayQueue`:一个使用优先级队列实现的无界阻塞队列
++ `SynchronousQueue`:一个不存储元素的阻塞队列
++ `LinkedTransferQueue`: 一个由链表结构组成的无界阻塞队列
++ `LinkedBlockingDeque`: 一个由链表结构组成的双向阻塞队列
 
 ---  
 
