--- a/Java/Java并发/02并发容器.md
+++ b/Java/Java并发/02并发容器.md
@@ -76,14 +76,28 @@ private transient volatile Node<E> tail = head;
 | 检查方法 | `element()` | `peek()` | 不可用 | 不可用 |
  
 ### 1. Java中的阻塞队列
-+ `ArrayBlockingQueue`:一个由数组结构组成的有界阻塞队列
-+ `LinkedBlockingQueue`:一个由链表结构组成的有界阻塞队列
-+ `PriorityBlockingQueue`:一个支持优先级排序的无界阻塞队列
-+ `DelayQueue`:一个使用优先级队列实现的无界阻塞队列
-+ `SynchronousQueue`:一个不存储元素的阻塞队列
-+ `LinkedTransferQueue`: 一个由链表结构组成的无界阻塞队列
-+ `LinkedBlockingDeque`: 一个由链表结构组成的双向阻塞队列
++ `ArrayBlockingQueue`:  
+一个由数组结构组成的有界阻塞队列；
++ `LinkedBlockingQueue`:  
+一个由链表结构组成的有界阻塞队列，默认和最大长度为Integer.MAX_VALUE；
++ `PriorityBlockingQueue`:  
+一个支持优先级排序的无界阻塞队列，默认元素采取自然顺序升序排列；
++ `DelayQueue`:  
+一个使用优先级队列实现的无界阻塞队列，队列中的元素必须实现`Delayed`接口；
++ `SynchronousQueue`:  
+一个不存储元素的阻塞队列，每一个put操作必须等待一个take操作，否则不能继续添加元素。支持公平访问队列，吞吐量高于`LinkedBlockingQueue`和`ArrayBlockingQueue`；
++ `LinkedTransferQueue`:  
+一个由链表结构组成的无界阻塞队列，相对其他队列多了`tryTransfer`和`transfer`方法；  
+    - `transfer`方法：当有消费者在等待接收元素（`take()`或`poll(time, unit)` 时），transfer把生产者传入的元素立刻传送给消费者；否则将元素存放在队列的tail节点，并等到元素被消费者消费了才返回
+	- `tryTransfer`方法：用来试探生产者传入的元素是否能直接传给消费者
++ `LinkedBlockingDeque`:   
+一个由链表结构组成的双向阻塞队列，可以在队列的两端插入和移出元素；初始化时设置容量可防止过度膨胀；可运用在“工作窃取”模式中。  
 
+### 2. 阻塞队列的实现原理
+JDK使用通知模式实现生产者和消费者高效率的通信。当生产者往满的队列里添加元素时会阻塞住生产者，当消费者消费了一个队列中的元素后，会通知生产者当前队列可用。
+
+
+ 
 ---  
 
 
