--- a/Java/Java并发/02并发容器.md
+++ b/Java/Java并发/02并发容器.md
@@ -96,9 +96,43 @@ private transient volatile Node<E> tail = head;
 ### 2. 阻塞队列的实现原理
 JDK使用通知模式实现生产者和消费者高效率的通信。当生产者往满的队列里添加元素时会阻塞住生产者，当消费者消费了一个队列中的元素后，会通知生产者当前队列可用。
 
-
- 
 ---  
 
-
 # Fork/Join框架
+
+Fork/Join框架是Java7提供的一个用于并行执行任务的框架，是把一个大任务分割成若干个小任务，最终汇总每个小任务结果后得到大任务结果的框架。  
+
+### 1. 工作窃取算法
+工作窃取(work-stealing)算法是指某个线程从其他队列里窃取任务来执行。通常使用双端队列，被窃取任务线程永远从双端队列的头部拿到任务执行，而窃取任务的线程永远从双端队列的尾部拿到任务执行。  
++ **优点**：充分利用线程进行并行计算，减少了线程间的竞争
++ **缺点**：在某些情况下还是存在竞争，比如双端队列只有一个任务时。消耗更多的系统资源，比如创建多个线程和多个双端队列。  
+
+#### 2. Fork/Join框架的设计
+主要做两件事：**分隔任务**和**执行任务并合并结果**。相关的两个类：  
++ `ForkJoinTask`：提供在任务中执行`fork()`和`join()`操作的机制，相关的两个子类为：  
+  - `RecursiveAction`：用于没有返回结果的任务。
+  - `RecursiveTask`：用于有返回结果的任务。
++ `ForkJoinPool`：ForkJoinTask需要通过ForkJoinPool来执行。
+
+### 3. Fork/Join框架的使用
+ForkJoinTask需要实现`compute()`方法，方法内首先需要判断任务是否足够小，如果足够小就直接执行任务；如果不足够小，就必须分割成两个子任务，每个子任务在调用fork方法时，又会进入compute方法；使用join方法会等待子任务执行完并得到其结果。  
+
+
+### 4. Fork/Join框架的异常处理
+ForkJoinTask提供了`isCompletedAbnormally()`方法来检查任务是否已经抛出异常或已经被取消了，并且可以通过ForkJoinTask的`getException()`方法获取异常。  
+
+`getException()`方法返回Throwable对象，如果任务被取消则返回CancellationException。如果任务没有完成或者没有抛出异常则返回null。  
+
+### 5. Fork/Join框架的实现原理
+ForkJoinPool由ForkJoinTask数组和ForkJoinWorkerThread数组组成，ForkJoinTask数组负责将存放程序提交给ForkJoinPool的任务，而ForkJoinWorkerThread数组负责执行这些任务。  
++ `fork()`方法会调用ForkJoinWorkerThread的pushTask方法异步的执行任务，然后立即返回结果
++ `join()`方法阻塞当前线程并等待获取结果，任务的状态有四种：**已完成(NORMAL)**、**被取消(CANCELLED)**、**信号(SIGNAL)**、**出现异常(EXCEPTIONAL)**。  
+
+
+
+
+
+
+
+
+
