指令重排序

--- a/Java/Java并发/05顺序一致性.md
+++ b/Java/Java并发/05顺序一致性.md
@@ -9,3 +9,9 @@
 + **传递性规则**  
   如果A happens-before B，且B happens-before C，那么A happens-before C.
 
+## 2. 指令重排序
+重排序分为3种类型：  
+
++ **编译器优化重排序**  
++ **指令级并行重排序**  
++ **内存系统重排序**
