--- a/Spring/SpringFramework/01.SpringIoC.md
+++ b/Spring/SpringFramework/01.SpringIoC.md
@@ -2,3 +2,13 @@
 
 ## 一、控制反转（依赖注入）
 IoC容器是Spring实现**依赖反转**模式的载体，在对象生成或初始化时直接将数据注入到对象中，或通过将对象引用注入到对象数据域中的方式来注入对方法调用的依赖。这种依赖注入是可以递归的，对象被逐层注入。  
+
+## 二、IoC容器
+在Spring中IoC容器有两个主要的IoC容器系列：基于**BeanFactory接口**的简单容器系列和**ApplicationContext应用上下文**。  
+
+**BeanDefinition**抽象了对Bean的定义，是让容器起作用的主要数据类型。对IoC容器来说，BeanDefinition是低依赖反转模式中管理的对象依赖关系的数据抽象，也是容器实现依赖反转功能的核心数据结构，依赖反转功能都是围绕对BeanDefinition的处理来完成的。  
+
+### BeanFactory
+
+![BeanFactory的层级结构](img/BeanFactoryHierarchy.JPG)
+
