--- a/Java/JVM/03对象创建及相关.md
+++ b/Java/JVM/03对象创建及相关.md
@@ -9,6 +9,15 @@
  + 对齐填充(Padding)  
     非必然存在，仅起占位符作用
 
+
+| 锁状态 | 25bit + 4bit + 1bit | 2bit |
+|--|--|--|
+| 轻量级锁 | 指向栈中锁记录的指针 | 00 |
+| 重量级锁 | 指向互斥量（重量级锁）的指针 | 10 |
+| GC标记 | 空 | 11 |
+| 偏向锁 | 线程ID + 对象分代年龄 + 1（偏向锁标识） | 01 |
+| 无锁 | hashCode + 对象分代年龄 + 0 | 01 |
+
 ## 对象的创建（虚拟机遇到new指令时的处理）
 1. 类加载检查。指令的参数在常量池中是否有类的符号引用，及加载、解析和初始化
 2. 为新生对象分配内存。划分方式分为“指针碰撞”和“空闲列表”。
