--- a/Java/JVM/03对象创建及相关.md
+++ b/Java/JVM/03对象创建及相关.md
@@ -26,7 +26,7 @@
 3. 将分配到的内存空间初始化为零值。
 4. 对对象进行必要的设置。  
 存储在对象头中的信息，如对象是哪个类的实例、如何找到类的元数据信息、对象的哈希码、GC分代年龄等。
-5. 执行<init>方法
+5. 执行`<init>`方法
 
 ## 对象的访问定位
 1. 通过栈上的reference数据来操作堆上的具体对象
