--- a/Java/JVM/03对象创建及相关.md
+++ b/Java/JVM/03对象创建及相关.md
@@ -29,8 +29,8 @@
 5. 执行`<init>`方法
 
 ## 对象的访问定位
-1. 通过栈上的reference数据来操作堆上的具体对象
-2. 主流的对象访问方式有使用句柄和直接指针两种
+1. 通过栈上的**reference数据**来操作堆上的具体对象
+2. 主流的对象访问方式有**句柄访问**和**直接指针**两种
   + 句柄访问：  
 	Java堆中划分内存作为句柄池，reference存储对象的句柄地址。句柄中包含了对象实例数据和类型数据各自的具体地址信息
   + 直接指针：  
