--- a/Java/JVM/03对象创建及相关.md
+++ b/Java/JVM/03对象创建及相关.md
@@ -40,7 +40,7 @@
 + **强引用(Reference)**  
   强引用存在时，垃圾收集器永远不会回收被引用的对象
 + **软引用(SoftReference)**  
-  描述有用但并非必需的对象，在内存将要溢出异常前会被列入回收范围进行第二次回收
+  描述有用但并非必需的对象，在内存将要溢出异常前会被列入回收范围进行第二次回收。当内存足够时，垃圾收集器不会回收这类引用。
 + **弱引用(WeakReference)**  
   描述非必需对象，且强度弱于软引用，被引用对象只能生存到下一次GC收集前。
 + **虚引用(PhantomReference)**  
