--- a/Java/Java并发/01锁.md
+++ b/Java/Java并发/01锁.md
@@ -1,14 +1,21 @@
+# Lock接口
+并发包中Lock接口实现了锁的功能，提供了与`synchronized`关键字类似的同步功能，只是在使用时需要显式地获取和释放锁。同时，Lock接口相对于synchronized关键字的重要特性：  
+
++ 尝试非阻塞式地获取锁
++ 能被中断地获取锁
++ 超时获取锁
+
 # 队列同步器(AbstractQueuedSynchronizer)
 
 ## 一、队列同步器的接口与示例  
-队列同步器是用来构建锁或者其他同步组件的基础框架，使用一个int成员变量标识同步状态，通过内置的FIFO队列来完成资源获取线程的排队工作。  
+队列同步器是用来构建锁或者其他同步组件的基础框架，它使用一个原子性的int成员变量标识`同步状态`，通过内置的`FIFO队列`来完成资源获取线程的排队工作。  
 
 同步器的主要使用方式是继承，子类通过继承同步器并实现它的抽象方法来管理同步状态：
 + `getState()`：获取当前同步状态；
 + `setState(int newState)`：设置当前同步状态；
 + `compareAndSetState(int expect, int update)`：使用CAS设置当前状态，能够保证状态设置的原子性。  
 
-同步器子类推荐被定义为自定义同步组件的静态内部类。同步器可重写的方法为：  
+同步器子类推荐被定义为自定义同步组件的`静态内部类`。同步器可重写的方法为：  
 
 | 方法名称 | 描述 |
 |--|--|
