同步器模板方法

--- a/Java/Java并发/01锁.md
+++ b/Java/Java并发/01锁.md
@@ -25,7 +25,12 @@
 | `protected boolean tryReleaseShared(int arg)` | 共享式释放同步状态 | 
 | `protected boolean isHeldExclusively()` | 当前同步器是否在独占模式下被线程占用，一般该方法表示是否被当前线程所独占 |   
 
-同步器提供的模板方法包括：**独占式获取与释放同步状态**、**共享式获取与释放同步状态**和**查询同步队列中的等待线程情况**。自定义同步组件将使用同步器提供的模板方法来实现自己的同步语义。  
+同步器提供的模板方法包括：  
++ **独占式获取与释放同步状态**。API包括：`void acquire(int arg)`、`void acquireInterruptibly(int arg)`、`boolean tryAcquireNanos(int arg, long nanos)`、`boolean release(int arg)`。
++ **共享式获取与释放同步状态**。API包括：`void acquireShared(int arg)`、`void acquireSharedInterruptibly(int arg)`、`boolean tryAcquireSharedNanos(int arg, long nanos)`、`boolean releaseShared(int arg)`。
++ **查询同步队列中的等待线程情况**。API包括：`Collection<Thread> getQueuedThreads()`。  
+
+自定义同步组件将使用同步器提供的模板方法来实现自己的同步语义。  
 
 ## 二、队列同步器实现分析
 
