--- a/Java/Java并发/01锁.md
+++ b/Java/Java并发/01锁.md
@@ -37,7 +37,7 @@
 ### 1. 同步队列
 同步器依赖内部的**同步队列**(FIFO双向队列)来完成同步状态的管理。当前线程获取同步状态失败时，同步器会将当前线程以及等待状态等信息构造成一个节点(Node)并将其放入同步队列，同时会阻塞当前线程；当同步状态释放时，会把首节点中的线程唤醒，使其再次尝试获取同步状态。  
 
-同步队列中的节点(Node)用来保存获取同步状态失败的**线程引用**、**等待状态**以及**前驱和后续节点**。节点的等待状态(waitStatus)包括如下：`CANCELLED`(值为1)、`SIGNAL`(值为-1)、`CONDITION`(值为-2)、`PROPAGATE`(值为-3)、`INITIAL`(值为0，初始状态)。
+同步队列中的节点(`AbstractQueuedSynchronizer.Node`)用来保存获取同步状态失败的**线程引用**、**等待状态**以及**前驱和后续节点**。节点的等待状态(waitStatus)包括如下：`CANCELLED`(值为1)、`SIGNAL`(值为-1)、`CONDITION`(值为-2)、`PROPAGATE`(值为-3)、`INITIAL`(值为0，初始状态)。
 
 ### 2. 独占式同步状态获取与释放
 + 通过调用同步器的`acquire(int arg)`方法可以获取同步状态，该方法对中断不敏感，即：由于线程获取同步状态失败后进入同步队列中，后续对线程进行中断操作时，线程不会从同步队列中移除。同步器的acquire方法如下：  
