--- a/Java/JVM/04虚拟机设置.md
+++ b/Java/JVM/04虚拟机设置.md
@@ -1,14 +1,17 @@
 ## JVM参数设置  
 | 属性 | 作用 |
-| -- | -- |
-| -Xms | 堆的最小值参数 | 
-| -Xmx | 堆的最大值参数 |
-| -Xmn | 新生代的大小（固定大小） |
-| -XX:NewSize | 新生代的大小（最小值） |
-| -XX:MaxNewSize | 新生代的大小（最大值） |
-| -Xoss | 设置本地方法栈大小（HotSpot虚拟机中无效） |
-| -Xss | 设置栈容量 |
-| -XX:PermSize | 方法区大小 |
-| -XX:MaxPermSize | 方法区最大值 |
-| -XX:MaxDirectMemorySize | 指定直接内存容量，默认与Java堆最大值一致 |
-| -XX:+HeapDumpOnOutOfMemoryError | 内存溢出时dump出当前的内存堆转储快照 |
+|--|--|
+| `verbose:gc` | 输出jvm里的gc信息 |
+| `-XX:+printGC` | 输出jvm里的gc信息 |
+| `-XX:+PrintGCDetails` | 输出jvm里的gc信息 |
+| `-Xms` | 堆的最小值参数 | 
+| `-Xmx` | 堆的最大值参数 |
+| `-Xmn` | 新生代的大小（固定大小） |
+| `-XX:NewSize` | 新生代的大小（最小值） |
+| `-XX:MaxNewSize` | 新生代的大小（最大值） |
+| `-Xoss` | 设置本地方法栈大小（HotSpot虚拟机中无效） |
+| `-Xss` | 设置栈容量 |
+| `-XX:PermSize` | 方法区大小 |
+| `-XX:MaxPermSize` | 方法区最大值 |
+| `-XX:MaxDirectMemorySize` | 指定直接内存容量，默认与Java堆最大值一致 |
+| `-XX:+HeapDumpOnOutOfMemoryError` | 内存溢出时dump出当前的内存堆转储快照 |
