--- a/Java/Java并发/02并发容器.md
+++ b/Java/Java并发/02并发容器.md
@@ -39,6 +39,9 @@ Java8中ConcurrentHashMap与Java7的差别：
 + 取消segment字段，直接采用了`transient volatile Node<K,V>[] table`保存数据，采用table数组元素作为锁，实现对每一行数据进行加锁，进一步减少并发冲突的概率；
 + 将`table数组+单向链表`的数据结构，变更为`table数组+单向链表+红黑树`的结构。对于个数超过8（默认值）的列表，采用红黑树的结构，降低查询时间复杂度为O(logN)。  
 
+![ConcurrentHashMap中Node的结构](img/Node结构.JPG)
+
+
 ---
 
 # ConcurrentLinkedQueue
