--- a/Redis/01.Redis内存相关.md
+++ b/Redis/01.Redis内存相关.md
@@ -32,9 +32,59 @@ Redis的配置信息都保存在`redis.conf`配置文件中，同时大多数的
 ## 四、键驱逐策略
 通过`maxmemory`配置可设定内存大小的硬件上限，运行时的Redis实例会受到该限制。  
 当Redis实例的内存耗尽时，`maxmemory-policy`配置会生效，主要策略包括：  
-+ `noeviction`
-+ `volatile-lru`
-+ `allkeys-lru`
-+ `volatile-random`
-+ `allkeys-random`
-+ `volatile-ttl`
++ `noeviction`-永不过期策略  
+  没有键设置为过期，如果Redis没有可用内存，任何写操作都会导致Redis错误。  
++ `volatile-lru`-最近较少使用策略  
+  将最近较少使用的键驱逐，这些键必须通过EXPIRE SET命令设置了超时，如果没有键符合条件而被驱逐出内存的话，Redis会在写入命令时返回异常信息。注意：当Redis内存耗尽时，Redis会开始删除设置了过期时间的键，即使键仍然有剩余时间。  
++ `allkeys-lru`-最近较少使用策略  
+  该策略会删除Redis中任何一个键，而且无法限制哪些键被删除。在应用需要持久化部分Redis键时无法使用该策略。在其他绝大多数情况下，该策略是比较好的初始选择。  
++ `volatile-random`-随机策略  
+  在主键空间中，随机移除某个key。  
++ `allkeys-random`-随机策略  
+  在设置了过期时间的键空间中，随机移除某个key。  
++ `volatile-ttl`-剩余时间策略  
+  在设置了过期时间的键空间中，具有更早过期时间的key优先移除。  
+
+## 五、内存高效的Redis数据结构
+#### 小巧的哈希、列表、集合和有序集合
+对于较小的上述类型，Redis使用**ziplist(压缩列表)**编码方式来存储，ziplist编码方式为Redis数据库极大地节约了内存使用。Redis会根据限制，动态地在ziplist和默认数据结构编码之间切换。  
+
++ 哈希表  
+  - `hash-max-ziplist-entries`：默认值512，小于该值使用ziplist编码。
+  - `has-max-ziplist-value`：默认64，设置了从ziplist转为哈希表达到的大小。
++ 列表  
+  - `list-max-ziplist-entries`
+  - `list-max-ziplist-value`
++ 集合（仅元素全部为整数时有效）
+  - `set-max-intset-entries`
++ 有序集合
+  - `zset-max-ziplist-entries`
+  - `zset-max-ziplsit-value`
+
+#### 把位、字节和Redis字符串作为随机访问数组
+通过使用Redis位图可以比使用集合节省巨大的内存。  
+
+#### 优化哈希，高效存储
+通过将**键对应字符串方式存储**改为**哈希存储**，把键分成两部分：第一部分用作键，第二部分用作哈希表中的字段名。  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
