--- a/Redis/01.Redis内存相关.md
+++ b/Redis/01.Redis内存相关.md
@@ -67,9 +67,13 @@ Redis的配置信息都保存在`redis.conf`配置文件中，同时大多数的
 #### 优化哈希，高效存储
 通过将**键对应字符串方式存储**改为**哈希存储**，把键分成两部分：第一部分用作键，第二部分用作哈希表中的字段名。  
 
+# 六、硬件和网路延迟
+Redis的延迟：
++ **命令延迟**
++ **往返延迟**
++ **客户端延迟**
 
-
-
+`latency-monitor-threshold`配置设置了毫秒为单位的限制，超过限制的所有或部分命令及Redis实例的活动都会被记录下来。默认值为0，代表不会自动运行延迟监控。
 
 
 
