--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -1,22 +1,23 @@
-## Redis(REmote DIctionary Server)
- 开源的可基于内存亦可持久化的日志型、Key-Value型数据库，称为数据结构服务器
+# Redis入门
+
+## 零、介绍
+ Redis(REmote DIctionary Server)是一种开源的内存中的数据结构存储系统，属于Key-Value型数据库，可用作数据库、缓存和消息中间件。
  
-### 一、启动
+### 一、启动Redis
 
  Windows    
  ```
  redis-server.exe redis.windows.conf    # 服务器
  redis-cli.exe -h 127.0.0.1 -p 6379     # 客户端
  ```
+
  Linux
  ```
  ./redis-server redis.conf              # 服务器
  ./redis-cli                            # 客户端 
  ```
- 
-## Redis入门
 
-### 二、配置
+### 二、配置Redis 
  1. 配置文件位于Redis安装目录下，文件名为`redis.conf` 
  2. CONFIG命令可查看或设置配置项  
    获取配置：`CONFIG GET [CONFIG_SETTING_NAME]`  
@@ -24,8 +25,48 @@
  3. 配置参数请参照api
  
 ### 三、数据类型
- Redis支持五种数据类型：`String`(字符串)、`Hash`(哈希)、`List`(列表)、`Set`(集合)、`Zset`(有序集合)。
+ Redis支持五种数据类型：`String`(字符串)、`Hash`(哈希)、`List`(列表)、`Set`(集合)、`Zset`(有序集合)。  
+除此之外，Redis还支持`HyperLogLog`、`Pub/Sub`等。  
 
-### 四、命令
+### 四、客户端连接
  + `redis-cli` 连接本地redis服务  
  + `redis-cli -h host -p port -a password` 连接远程redis服务  
+
+### 五、Redis命令
+
+#### 5.1 键操作
+| 命令 | 描述 | 返回值 | 时间复杂度 |
+| :-- | :-- | :--: |
+| `DEL key [key ...]` | 删除指定的一批keys，如果某些key不存在则直接忽略 | 被删除keys的数量 | O(N)，N为将要删除的key的数量 |
+| `DUMP key` | 序列化给定key并返回被序列化的值 | key不存在则返回nil，否则返回序列化后的值 | O(1) + O(N*M)，N为redis对象值的数量，M为值的平均大小 |  
+| `EXISTS key [key ...]` | 检查key是否存在 | 1：key存在；0：key不存在 | O(1) |
+| `EXPIRE key seconds` | 设置过期时间，超过时间后，将会自动删除该key。 | 1：成功设置超时时间；0：key不存在或不能设置超时时间。 | O(1) |
+| `EXPIREAT key timestamp` | 设置过期时间戳，指定时间点（UNIX时间戳） | 1：成功设置超时时间；0：key不存在或不能设置超时时间。 | O(1) |   
+| `KEYS pattern` | 查找所有符合给定模式pattern的key | 返回所有符合条件的key | O(N)，N为数据库中key的数量 |
+| `MIGRATE host port key destination-db timeout [COPY] [REPLACE]` | 将key原子性地从当前实例传送到目标实例的指定数据库上 | 成功返回OK，否则返回相应的错误 | O(N)+DUMP+DEL |
+| `MOVE key db` | 将当前数据库key移动到给定数据库 | 1：移动成功；0：移动失败 | O(1) |
+| `OBJECT subcommand [arguments [arguments ...]]` | 用于检查或了解keys是否用到了特殊编码的数据类型来存储空间。可使用REFCOUNT、ENCODING、IDLETIME等子命令。 | | O(1) |
+| `PERSIST key` | 移除过期时间 | 1：超时时间移除成功；0：key不存在或key没有设置超时时间 | O(1) |
+| `PEXPIRE key milliseconds` | 设置过期时间，单位为毫秒 | 1：设置成功；0：key不存在或设置失败 | O(1) |
+| `PEXPIREAT key milliseconds-timestamp` | 设置过期时间戳，单位为毫秒 | 1：设置成功；0：key不存在或没办法设置生存时间 | O(1) |
+| `TTL|PTTL key` | 秒/毫秒方式返回key剩余过期时间 | -1：key存在但无过期时间；-2：key不存在；以秒/毫秒为单位返回剩余时间值 | O(1) |
+| `RANDOMKEY` | 从当前数据库随机返回key | 没有任何值则返回nil，否则返回一个随机的key | O(1) |
+| `RENAME key newkey` | 将key重命名为newkey，如果key与newkey相同则返回错误。如果newkey已存在则覆盖。 | OK：成功 | O(1) |
+| `RENAMENX key newkey` | 当且仅当newkey不存在时，将key改名为newkey | 1：修改成功；0：newkey已存在，修改失败；当key不存在时返回一个错误 | O(1) |
+| `RESTORE key ttl serialized-value [REPLACE]` | 序列化给定的序列值，并将它和给定的key关联，与DUMP对应。 | 如果反序列化成功则返回OK，否则返回一个错误。 | O(1) + O(N*M) |
+| `SCAN cursor [MATCH pattern] [COUNT count]` | SCAN命令及其相关的SSCAN、HSCAN和ZSCAN命令都用于增量迭代一个集合元素。每次执行返回少量元素，不会像KEYS或SMEMBERS命令带来的可能会阻塞服务器的问题。当游标参数被设置为0时，服务器开始一次新的迭代，当服务器返回游标为0时，表示迭代已结束。 | 返回一个包含两个元素的回复：第一个元素是游标的值，第二个元素是查找的值。 | O(1)或O(N) |
+| `SORT key [BY pattern] [LIMIT offset count] [GET pattern] [ASC|DESC] [ALPHA] destination` | 返回或存储键为key的list、set、zset中的元素，默认按照数值类型排序，包含字符串值时使用ALPHA修饰符。 | 排序后的列表 | O(N+M*log(M))，N是列表的元素个数，M是返回元素的个数。 |
+| `TOUCH key [key ...]` | 修改指定key的最后访问时间 | 操作的key的数量 | O(N) |
+| `TTL key` | 返回key剩余的过期时间 | 返回key有效的秒数，或一个负值的错误：key不存在或已过期返回-2，key存在且未设置超时时间返回-1 | O(1) |
+| `TYPE key` | 返回key存储的值的类型 | 返回当前key的数据类型，如果key不存在时返回none。 | O(1) |
+| `UNLINK key [key ...]` | 和DEL十分相似：删除指定的key(s),若key不存在则该key被跳过。但是，相比DEL会产生阻塞，该命令会在另一个线程中回收内存，因此它是非阻塞的。 | 删除的key的数量 | O(1)或O(N) |
+| `WAIT numsSlave timeout` | 该命令将阻止当前客户端，直到所有先前的写入命令成功传输并且至少由指定数量的从站确认。 | 该命令返回在当前连接的上下文中执行的所有写操作所达到的从服务器的数量。 | O(1) |
+
+
+
+
+
+
+
+
+
