--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -1,5 +1,8 @@
 # Redis入门
 
+[key操作](# 5.1 键操作)
+
+
 ## 零、介绍
  Redis(REmote DIctionary Server)是一种开源的内存中的数据结构存储系统，属于Key-Value型数据库，可用作数据库、缓存和消息中间件。
  
