--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -1,12 +1,12 @@
 # Redis入门
 
-- [key操作](#5.1键操作)
+- [key操作](#5.1-键操作)
 
 
 ## 零、介绍
  Redis(REmote DIctionary Server)是一种开源的内存中的数据结构存储系统，属于Key-Value型数据库，可用作数据库、缓存和消息中间件。
  
-### 一、启动Redis
+## 一、启动Redis
 
  Windows    
  ```
@@ -20,24 +20,24 @@
  ./redis-cli                            # 客户端 
  ```
 
-### 二、配置Redis 
+## 二、配置Redis 
  1. 配置文件位于Redis安装目录下，文件名为`redis.conf` 
  2. CONFIG命令可查看或设置配置项  
    获取配置：`CONFIG GET [CONFIG_SETTING_NAME]`  
    编辑配置：`CONFIG SET [CONFIG_SETTING_NAME] [NEW_CONFIG_VALUE]`  
  3. 配置参数请参照api
  
-### 三、数据类型
+## 三、数据类型
  Redis支持五种数据类型：`String`(字符串)、`Hash`(哈希)、`List`(列表)、`Set`(集合)、`Zset`(有序集合)。  
 除此之外，Redis还支持`HyperLogLog`、`Pub/Sub`等。  
 
-### 四、客户端连接
+## 四、客户端连接
  + `redis-cli` 连接本地redis服务  
  + `redis-cli -h host -p port -a password` 连接远程redis服务  
 
-### 五、Redis命令
+## 五、Redis命令
 
-#### 5.1键操作
+### 5.1 键操作
 
 | 命令 | 描述 | 返回值 | 时间复杂度 |
 | :-- | :-- | :--: | :--: |
