--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -2,7 +2,6 @@
 
 - [5.1 键操作](#5.1-键操作)
 
-
 ## 零、介绍
  Redis(REmote DIctionary Server)是一种开源的内存中的数据结构存储系统，属于Key-Value型数据库，可用作数据库、缓存和消息中间件。
  
@@ -40,7 +39,7 @@
 ### 5.1 键操作
 
 | 命令 | 描述 | 返回值 | 时间复杂度 |
-| :-- | :-- | :--: | :--: |
+| :-- | :-- | :-- | :-- |
 | `DEL key [key ...]` | 删除指定的一批keys，如果某些key不存在则直接忽略 | 被删除keys的数量 | O(N)，N为将要删除的key的数量 |
 | `DUMP key` | 序列化给定key并返回被序列化的值 | key不存在则返回nil，否则返回序列化后的值 | O(1) + O(N*M)，N为redis对象值的数量，M为值的平均大小 |  
 | `EXISTS key [key ...]` | 检查key是否存在 | 1：key存在；0：key不存在 | O(1) |
@@ -65,6 +64,39 @@
 | `TYPE key` | 返回key存储的值的类型 | 返回当前key的数据类型，如果key不存在时返回none。 | O(1) |
 | `UNLINK key [key ...]` | 和DEL十分相似：删除指定的key(s),若key不存在则该key被跳过。但是，相比DEL会产生阻塞，该命令会在另一个线程中回收内存，因此它是非阻塞的。 | 删除的key的数量 | O(1)或O(N) |
 | `WAIT numsSlave timeout` | 该命令将阻止当前客户端，直到所有先前的写入命令成功传输并且至少由指定数量的从站确认。 | 该命令返回在当前连接的上下文中执行的所有写操作所达到的从服务器的数量。 | O(1) |
+
+### 5.2 字符串操作
+| 命令 | 描述 | 返回值 | 时间复杂度 |
+| :-- | :-- | :-- | :-- |
+| `APPEND key value` | 将value追加到key对应的原来值（value）的结尾。 | 返回append后字符串值（value）的长度| O(1) |
+| `BITCOUNT key [start end]` | 字节操作，统计字符串被设置为1的bit数 | 被设置为1的位的数量 | O(N) |
+| `BITFIELD key [GET type offset] [SET type offset value] [INCRBY type offset increment] [OVERFLOW WRAP|SAT|FAIL]` | 把Redis字符串当做位数组，并能对变长位宽和任意未字节对齐的指定整型位域进行寻址。BITFIELD命令能操作多字节位域，它会执行一系列操作，并返回一个响应数组，在参数列表中每个响应数组匹配相应的操作。 | 本命令返回一个针对子命令给定位置的处理结果组成的数组。 | 每个子命令都是O(1) |
+| `BITOP operation destkey key [key ...]` | 对一个或多个保存二进制位的字符串 key 进行位元操作，并将结果保存到destkey上。支持AND、OR、NOT、XOR这四种操作中的任意一种参数。 | 保存到destkey的字符串的长度，和输入 key 中最长的字符串长度相等。 | O(N)，性能缓慢 |
+| `BITPOS key bit [start] [end]` | 返回字符串里面第一个被设置为1或者0的bit位。 | 命令返回字符串里面第一个被设置为1或者0的bit位。 | O(N) |
+| `DECR key` | 对key对应的数字做减1操作。如果key不存在，那么在操作之前，这个key对应的值会被置为0。 | 数字，减小之后的value | O(1) |
+| `DECRBY key decrement` | 将key对应的数字减decrement。如果key不存在，操作之前，key就会被置为0。 | 返回一个数字：减少之后的value值。 | O(1) |
+| `GET key` | 返回key的value。如果key不存在，返回特殊值nil。 | key对应的value，或者nil（key不存在时） | O(1) |
+| `GETBIT key offset` | 返回key对应的string在offset处的bit值。当offset超出了字符串长度的时候，这个字符串就被假定为由0比特填充的连续空间。 | 在offset处的bit值 | O(1) |
+| `GETRANGE key start end` | 返回key对应的字符串value的子串，这个子串是由start和end位移决定的（两者都在string内）。可以用负的位移来表示从string尾部开始数的下标。 | 字符串value的子串 | O(N)，最终返回的长度决定 |
+| `GETSET key value` | 自动将key对应到value并且返回原来key对应的value。 | 返回之前的旧值，如果之前Key不存在将返回nil。 | O(1) |
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
