--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -70,7 +70,7 @@
 | :-- | :-- | :-- | :-- |
 | `APPEND key value` | 将value追加到key对应的原来值（value）的结尾。 | 返回append后字符串值（value）的长度| O(1) |
 | `BITCOUNT key [start end]` | 字节操作，统计字符串被设置为1的bit数 | 被设置为1的位的数量 | O(N) |
-| `BITFIELD key [GET type offset] [SET type offset value] [INCRBY type offset increment] [OVERFLOW WRAP|SAT|FAIL]` | 把Redis字符串当做位数组，并能对变长位宽和任意未字节对齐的指定整型位域进行寻址。BITFIELD命令能操作多字节位域，它会执行一系列操作，并返回一个响应数组，在参数列表中每个响应数组匹配相应的操作。 | 本命令返回一个针对子命令给定位置的处理结果组成的数组。 | 每个子命令都是O(1) |
+| `BITFIELD key [GET type offset] [SET type offset value] [INCRBY type offset increment] [OVERFLOW WRAP\|SAT\|FAIL]` | 把Redis字符串当做位数组，并能对变长位宽和任意未字节对齐的指定整型位域进行寻址。BITFIELD命令能操作多字节位域，它会执行一系列操作，并返回一个响应数组，在参数列表中每个响应数组匹配相应的操作。 | 本命令返回一个针对子命令给定位置的处理结果组成的数组。 | 每个子命令都是O(1) |
 | `BITOP operation destkey key [key ...]` | 对一个或多个保存二进制位的字符串 key 进行位元操作，并将结果保存到destkey上。支持AND、OR、NOT、XOR这四种操作中的任意一种参数。 | 保存到destkey的字符串的长度，和输入 key 中最长的字符串长度相等。 | O(N)，性能缓慢 |
 | `BITPOS key bit [start] [end]` | 返回字符串里面第一个被设置为1或者0的bit位。 | 命令返回字符串里面第一个被设置为1或者0的bit位。 | O(N) |
 | `DECR key` | 对key对应的数字做减1操作。如果key不存在，那么在操作之前，这个key对应的值会被置为0。 | 数字，减小之后的value | O(1) |
