--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -52,7 +52,7 @@
 | `PERSIST key` | 移除过期时间 | 1：超时时间移除成功；0：key不存在或key没有设置超时时间 | O(1) |
 | `PEXPIRE key milliseconds` | 设置过期时间，单位为毫秒 | 1：设置成功；0：key不存在或设置失败 | O(1) |
 | `PEXPIREAT key milliseconds-timestamp` | 设置过期时间戳，单位为毫秒 | 1：设置成功；0：key不存在或没办法设置生存时间 | O(1) |
-| `TTL|PTTL key` | 秒/毫秒方式返回key剩余过期时间 | -1：key存在但无过期时间；-2：key不存在；以秒/毫秒为单位返回剩余时间值 | O(1) |
+| `TTL\|PTTL key` | 秒/毫秒方式返回key剩余过期时间 | -1：key存在但无过期时间；-2：key不存在；以秒/毫秒为单位返回剩余时间值 | O(1) |
 | `RANDOMKEY` | 从当前数据库随机返回key | 没有任何值则返回nil，否则返回一个随机的key | O(1) |
 | `RENAME key newkey` | 将key重命名为newkey，如果key与newkey相同则返回错误。如果newkey已存在则覆盖。 | OK：成功 | O(1) |
 | `RENAMENX key newkey` | 当且仅当newkey不存在时，将key改名为newkey | 1：修改成功；0：newkey已存在，修改失败；当key不存在时返回一个错误 | O(1) |
