格式错误修改

--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -58,7 +58,7 @@
 | `RENAMENX key newkey` | 当且仅当newkey不存在时，将key改名为newkey | 1：修改成功；0：newkey已存在，修改失败；当key不存在时返回一个错误 | O(1) |
 | `RESTORE key ttl serialized-value [REPLACE]` | 序列化给定的序列值，并将它和给定的key关联，与DUMP对应。 | 如果反序列化成功则返回OK，否则返回一个错误。 | O(1) + O(N*M) |
 | `SCAN cursor [MATCH pattern] [COUNT count]` | SCAN命令及其相关的SSCAN、HSCAN和ZSCAN命令都用于增量迭代一个集合元素。每次执行返回少量元素，不会像KEYS或SMEMBERS命令带来的可能会阻塞服务器的问题。当游标参数被设置为0时，服务器开始一次新的迭代，当服务器返回游标为0时，表示迭代已结束。 | 返回一个包含两个元素的回复：第一个元素是游标的值，第二个元素是查找的值。 | O(1)或O(N) |
-| `SORT key [BY pattern] [LIMIT offset count] [GET pattern] [ASC|DESC] [ALPHA] destination` | 返回或存储键为key的list、set、zset中的元素，默认按照数值类型排序，包含字符串值时使用ALPHA修饰符。 | 排序后的列表 | O(N+M*log(M))，N是列表的元素个数，M是返回元素的个数。 |
+| `SORT key [BY pattern] [LIMIT offset count] [GET pattern] [ASC\|DESC] [ALPHA] destination` | 返回或存储键为key的list、set、zset中的元素，默认按照数值类型排序，包含字符串值时使用ALPHA修饰符。 | 排序后的列表 | O(N+M*log(M))，N是列表的元素个数，M是返回元素的个数。 |
 | `TOUCH key [key ...]` | 修改指定key的最后访问时间 | 操作的key的数量 | O(N) |
 | `TTL key` | 返回key剩余的过期时间 | 返回key有效的秒数，或一个负值的错误：key不存在或已过期返回-2，key存在且未设置超时时间返回-1 | O(1) |
 | `TYPE key` | 返回key存储的值的类型 | 返回当前key的数据类型，如果key不存在时返回none。 | O(1) |
