--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -79,11 +79,19 @@
 | `GETBIT key offset` | 返回key对应的string在offset处的bit值。当offset超出了字符串长度的时候，这个字符串就被假定为由0比特填充的连续空间。 | 在offset处的bit值 | O(1) |
 | `GETRANGE key start end` | 返回key对应的字符串value的子串，这个子串是由start和end位移决定的（两者都在string内）。可以用负的位移来表示从string尾部开始数的下标。 | 字符串value的子串 | O(N)，最终返回的长度决定 |
 | `GETSET key value` | 自动将key对应到value并且返回原来key对应的value。 | 返回之前的旧值，如果之前Key不存在将返回nil。 | O(1) |
-
-
-
-
-
+| `INCR key` | 对指定的key的数值执行原子的加1操作。key不存在，则执行前将值设置为0；如果key存储的值不是字符串类型或不能表示为一个整数，则返回错误。 | 执行递增操作后key对应的值。 | O(1) |
+| `INCRBY key increment` | 将key对应的数字加increment。。key不存在，则执行前将值设置为0；如果key存储的值不是字符串类型或不能表示为一个数值，则返回错误。 | 增加之后的value值。 | O(1) |
+| `INCRBYFLOAT key increment` | 通过指定浮点数key来增长浮点数的值，当key不存在时，执行前先设置0。key存储的不是字符串或不能表示为双精度浮点值则返回错误。 | 增加increment后的值。 | O(1) |
+| `MGET key [key ...]` | 返回所有指定key的value值，不存在或key对应类型不是string的，返回特殊值nil。 | 指定key对应的value列表。 | O(N),N为key值的个数 |
+| `MSET key value [key value ...]` | 批量设置key的值，会用新的value替换已存在的value。属于原子操作。 | 返回OK，不会失败。 | O(N),N为key值的个数 |
+| `MSETNX key value [key value ...]` | 批量设置key的值，只要有一个key已经存在，则一个操作都不会执行。属于原子操作。 | 1:所有key被设置；0:没有key被设置。 | O(N),N为key值的个数 |
+| `PSETEX key milliseconds value` | 以毫秒为单位设置到期时间 | OK | O(1) |
+| `SET key value [EX seconds] [PX milliseconds] [NX|XX]` | 将键key设置为指定的字符串值。 | 正常执行返回OK，否则返回nil | O(1) |
+| `SETBIT key offset value` | 设置或清空key的value在offset处的bit值。 | 返回在offset处原来的bit值。 | O(1) |
+| `SETEX key seconds value` | 设置key对应字符串value，并设置超时时间。原子性操作。 | OK | O(1) |
+| `SETNX key value` | 将key设置为value，当key存在时则不做任何处理。 | 1:key被设置;0:key没有被设置 | O(1) |
+| `SETRANGE key offset value` | 覆盖key对应的string的一部分，从指定的offset处开始，覆盖value的长度。 | 返回修改后的字符串长度 | O(1) |
+| `STRLEN key` | 返回key的string类型value的长度。非string类型返回错误。 | key对应的字符串value的长度，或者0（key不存在） | O(1) |
 
 
 
