--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -93,18 +93,44 @@
 | `SETRANGE key offset value` | 覆盖key对应的string的一部分，从指定的offset处开始，覆盖value的长度。 | 返回修改后的字符串长度 | O(1) |
 | `STRLEN key` | 返回key的string类型value的长度。非string类型返回错误。 | key对应的字符串value的长度，或者0（key不存在） | O(1) |
 
+### 5.3 list操作
+| 命令 | 描述 | 返回值 | 时间复杂度 |
+| :-- | :-- | :-- | :-- |
+| `BLPOP key [key ...] timeout` | 移除并且返回key列表的**头部元素**。(阻塞) | 没有元素时，返回nil和timeout的多批量值；有元素时，返回key和value的多批量值。 | O(1) |
+| `BRPOP key [key ...] timeout` | 移除并且返回key列表的**尾部元素**。(阻塞) | 没有元素时，返回nil和timeout的多批量值；有元素时，返回key和value的多批量值。 | O(1) |
+| `BRPOPLPUSH source destination timeout` | 原子性地返回并移除存储在source的列表的尾部元素， 并把该元素放入存储在destination列表的头部。(阻塞) | 批量回复值 | O(1) |
+| `LINDEX key index` | 返回key列表里索引为index的元素。 | 请求的对应元素，或index超出范围时的nil | O(1) |
+| `LINSERT key BEFORE\|AFTER pivot value` | 把value插入到key列表中的基准值pivot的前面或后面。key不存在时，不会发生任何操作；key存在但非list类型是，返回error。 | 经过插入操作后的list长度，或pivot找不到时返回-1。 | O(N) |
+| `LLEN key` | 并且返回长度为0；key不是list时返回error。 | key对应的list长度。 | O(1) |
+| `LPOP key` | 移除并返回key对应的list的第一个元素。 | 返回第一个元素的值，或者当key不存在时返回nil。 | O(1) |
+| `LPUSH key value [value ...]` | 将所有指定的值插入到key对应的list头部。如果key不存在，会提前创建一个空列表；如果对应的不是list类型，则返回错误。 | push操作后list的长度。 | O(1) |
+| `LPUSHX key value` | 只有当key存在且为list时，在头部插入value。当key不存在时不会进行任何操作。 | push后list的长度。 | O(1) |
+| `LRANGE key start stop` | 返回存储在key中的指定范围内的元素。 | 指定范围里的列表元素。 | O(S+N) |
+| `LREM key count value` | 从列表中移除前count次出现的value值。 | 被移除的元素个数。 | O(N)，N是列表的长度。 |
+| `LSET key index value` | 设置index位置的list元素值为value。index超出范围时返回error。 | OK | O(N)，N代表list的长度。 |
+| `LTRIM key start stop` | 修建一个已存在的list，只包含指定范围内的元素。 | OK | O(N)，N代表被移除元素的个数。 |
+| `RPOP key` | 移除并返回list的最后一个元素。 | 最后一个元素的值，或当key不存在时返回nil。 | O(1) |
+| `RPOPLPUSH source destination` | 原子性返回并移除存储在source列表的尾部元素并放入destination列表的头部。 | 被移除和放入的元素。 | O(1) |
+| `RPUSH key value [value ...]` | 向key列表的尾部插入所有指定的元素。key不存在时会先创建空列表然后执行push操作。 | push操作后列表长度。 | O(1) |
+| `RPUSHX key value` | 当且仅当key列表存在时，将值value插入到列表的尾部。 | push操作后列表的长度。 | O(1) |
 
-
-
-
-
-
-
-
-
-
-
-
+### 5.4 hash操作
+| 命令 | 描述 | 返回值 | 时间复杂度 |
+| :-- | :-- | :-- | :-- |
+| `HDEL key field [field ...]` | 从key哈希集中移除指定的域。不存在的域将被忽略。 | 返回成功移除的域的数量。 | O(N)，N被删除的字段数量。 |
+| `HEXISTS key field` | 返回哈希集中field是否存在。 | 1：哈希集存在field域；0：哈希集中不包含field，或key不存在。 | O(1) |
+| `HGET key field` | 返回哈希集中字段关联的值。 | field字段关联的值，字段不存在或key不存在则返回nil。 | O(1) |
+| `HGETALL key` | 返回哈希集中所有的字段和值。 | 哈希集中字段和值的列表。当key不存在时返回空列表。 | O(N),N代表hash的大小。 |
+| `HINCRBY key field increment` | 增加哈希集中field对应的数值。 | 增值操作后字段的值。 | O(1) |
+| `HINCRBYFLOAT key field increment` | 浮点型增加哈希集中field对应的数值。 | 增值操作后的值。 | O(1) |
+| `` | | | |
+| `` | | | |
+| `` | | | |
+| `` | | | |
+| `` | | | |
+| `` | | | |
+| `` | | | |
+| `` | | | |
 
 
 
