--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -123,14 +123,15 @@
 | `HGETALL key` | 返回哈希集中所有的字段和值。 | 哈希集中字段和值的列表。当key不存在时返回空列表。 | O(N),N代表hash的大小。 |
 | `HINCRBY key field increment` | 增加哈希集中field对应的数值。 | 增值操作后字段的值。 | O(1) |
 | `HINCRBYFLOAT key field increment` | 浮点型增加哈希集中field对应的数值。 | 增值操作后的值。 | O(1) |
-| `` | | | |
-| `` | | | |
-| `` | | | |
-| `` | | | |
-| `` | | | |
-| `` | | | |
-| `` | | | |
-| `` | | | |
+| `HKEYS key` | 返回哈希集中所有字段的名称。 | 哈希集中的字段列表，当key指定的哈希集不存在时返回空列表。 | O(N)，N是哈希集的大小。 |
+| `HLEN key` | 返回哈希集包含的字段的数量。 | 哈希集中字段的数量，当key指定的哈希集不存在时返回0。 | O(1) |
+| `HMGET key field [field ...]` | 返回哈希集中指定字段的值。 | 含有给定字段及其值的列表，并保持与请求相同的顺序。 | O(N)，N代表被请求字段的数量。 |
+| `HMSET key field value [field value ...]` | 设置哈希集中指定字段的值。 | OK | O(N)，N代表被设置字段的数量。 |
+| `HSCAN key cursor [MATCH pattern] [COUNT count]` | 遍历哈希集中的字段。 | 遍历列表。 | O(1)或O(N) |
+| `HSET key field value` | 设置 key 指定的哈希集中指定字段的值。如果哈希集不存在则创建并关联key。如果字段存在则被重写。 | 1：field是一个新的字段；0：field已存在。 | O(1) |
+| `HSETNX key field value` | 只有哈希集中不存在指定字段时，设置字段的值。如果哈希集不存在会创建并关联key。如果字段已存在则操作无效。 | 1：设置新字段；0：未执行操作。 | O(1) |
+| `HSTRLEN key field` | 返回哈希集指定字段的值的字符串长度，如果哈希集或字段不存在则返回0。 | 哈希集指定字段的值的字符串长度或零。 | O(1) |
+| `HVALS key` | 返回哈希集所有字段的值。 | 哈希集中值的列表，key不存在则返回空列表。 | O(N)，N代表哈希集的大小。 |
 
 
 
