--- a/Redis/00.Redis入门.md
+++ b/Redis/00.Redis入门.md
@@ -3,36 +3,36 @@
 - [5.1 键操作](#5.1-键操作)
 
 ## 零、介绍
- Redis(REmote DIctionary Server)是一种开源的内存中的数据结构存储系统，属于Key-Value型数据库，可用作数据库、缓存和消息中间件。
- 
+Redis(REmote DIctionary Server)是一种开源的内存中的数据结构存储系统，属于Key-Value型数据库，可用作数据库、缓存和消息中间件。
+
 ## 一、启动Redis
 
- Windows    
- ```
- redis-server.exe redis.windows.conf    # 服务器
- redis-cli.exe -h 127.0.0.1 -p 6379     # 客户端
- ```
+Windows    
+```
+redis-server.exe redis.windows.conf    # 服务器
+redis-cli.exe -h 127.0.0.1 -p 6379     # 客户端
+```
 
- Linux
- ```
- ./redis-server redis.conf              # 服务器
- ./redis-cli                            # 客户端 
- ```
+Linux
+```
+./redis-server redis.conf              # 服务器
+./redis-cli                            # 客户端 
+```
 
 ## 二、配置Redis 
- 1. 配置文件位于Redis安装目录下，文件名为`redis.conf` 
- 2. CONFIG命令可查看或设置配置项  
-   获取配置：`CONFIG GET [CONFIG_SETTING_NAME]`  
-   编辑配置：`CONFIG SET [CONFIG_SETTING_NAME] [NEW_CONFIG_VALUE]`  
- 3. 配置参数请参照api
- 
+1. 配置文件位于Redis安装目录下，文件名为`redis.conf` 
+2. CONFIG命令可查看或设置配置项  
+获取配置：`CONFIG GET [CONFIG_SETTING_NAME]`  
+编辑配置：`CONFIG SET [CONFIG_SETTING_NAME] [NEW_CONFIG_VALUE]`  
+3. 配置参数请参照api
+
 ## 三、数据类型
- Redis支持五种数据类型：`String`(字符串)、`Hash`(哈希)、`List`(列表)、`Set`(集合)、`Zset`(有序集合)。  
+Redis支持五种数据类型：`String`(字符串)、`Hash`(哈希)、`List`(列表)、`Set`(集合)、`Zset`(有序集合)。  
 除此之外，Redis还支持`HyperLogLog`、`Pub/Sub`等。  
 
 ## 四、客户端连接
- + `redis-cli` 连接本地redis服务  
- + `redis-cli -h host -p port -a password` 连接远程redis服务  
++ `redis-cli` 连接本地redis服务  
++ `redis-cli -h host -p port -a password` 连接远程redis服务  
 
 ## 五、Redis命令
 
@@ -133,7 +133,29 @@
 | `HSTRLEN key field` | 返回哈希集指定字段的值的字符串长度，如果哈希集或字段不存在则返回0。 | 哈希集指定字段的值的字符串长度或零。 | O(1) |
 | `HVALS key` | 返回哈希集所有字段的值。 | 哈希集中值的列表，key不存在则返回空列表。 | O(N)，N代表哈希集的大小。 |
 
-
+### 5.5 set操作
+| 命令 | 描述 | 返回值 | 时间复杂度 |
+| :-- | :-- | :-- | :-- |
+| `SADD key memeber [member ...]` | 向集合中添加一个或多个members。如果member已存在则忽略，如果集合不存在则创建。key非集合则返回错误。 | 返回成功移除的域的数量。 | O(N)，N被删除的字段数量。 |
+| `SCARD key` | 返回集合的元素数量。 | 集合的元素数量；如果key不存在则返回0。 | O(1) |
+| `SDIFF key [key...]` | 返回一个集合与给定集合的差集的元素，不存在的key视为空集。 | 差集成员列表。 | O(N)，N代表所有给定结合的全部元素数量。 |
+| `SDIFFSTORE destination key [key ...]` | 将集合的差集存入到destination集合中。如果destination已存在则覆盖。 | 结果集的个数。 | O(N)，N代表所有给定结合的全部元素数量。 |
+| `SINTER key [key...]` | 返回指定集合的元素交集。 | 结果集成员列表。 | O(N*M),N是最小集合的大小，M是集合的数量。 |
+| `SINTERSTORE destination key [key ...]` | 存储交集到destination，如果destination已存在则覆盖。 | 结果集中元素个数。 | O(N*M),N是最小集合的大小，M是集合的数量 |
+| `SISMEMBER key member` | 返回成员member是否存储在集合中。 | 1：是集合的元素；0：不是集合的元素。 | O(1) |
+| `SMEMBERS key` | 返回集合所有的元素。 | 集合所有元素的列表。 | O(N)，N是集合的大小。 |
+| `SMOVE source destination member` | 将source集合中的成员移动到destination集合中。如果source不存在或不包含指定元素，则不执行任何操作并返回0. | 1：元素被成功移除；0：未操作 | O(1) |
+| `SPOP key [count]` | 从集合中移除并返回一个或多个随机元素。 | 被删除的元素，或key不存在时返回nil。 | O(1) |
+| `SRANDMEMBER key [count]` | 随机返回集合中的count个元素，未设置count则返回1个元素。 | 随机元素的列表。 | O(N)，N是count的绝对值。 |
+| `SREM key member [member...]` | 移除集合中指定的元素，如果集合中不存在该元素则忽略，如果key不存在则视为空集合，返回0。 | |
+| `SSCAN key cursor [MATCH pattern] [COUNT count]` | 参照SCAN。 | | |
+| `SUNION key [key...]` | 返回给定的多个集合的并集。不存在的key默认为是空集。 | 并集的成员列表。 | O(N)，N代表所有集合的元素数量。 |
+| `SUNIONSTORE destination key [key...]` | 将并集的元素存储到destination集合中。如果destination已经存在，则覆盖。 | 并集的元素个数。 | O(N)，N代表所有集合的元素数量。|
+| `` | | | |
+| `` | | | |
+| `` | | | |
+| `` | | | |
+| `` | | | |
 
 
 
