--- a/Spring/SpringBoot/01.SpringBoot基础.md
+++ b/Spring/SpringBoot/01.SpringBoot基础.md
@@ -115,13 +115,13 @@ dependencies {
 
 
 ## 二、Configuration类
-+ SpringBoot提倡使用java-based配置  
-  通常，定义了main方法的类也是主要`@Configuartion`的首选。
-+ 引入更多的configuration类  
-  通过`@Import`注解可引入额外的configuration类。  
-  可使用`@ComponentScan`来自动注册所有的Spring组件，包括`@Configuration`类。
-+ 引入XML配置  
-  通过`@ImportResource`注解来加载XML配置文件。
+SpringBoot提倡使用java-based配置。虽然SpringBoot支持XML配置，推荐主要的配置信息是一个单独的`@Configuration`类。通常，定义了main方法的类也是主要`@Configuartion`的首选。  
+
+### 1. 引入额外configuration类  
+`@Import`注解可用于引入额外的configuration类。也可使用`@ComponentScan`来自动注册包括`@Configuration`类的所有的Spring组件方式。  
+
+### 2. 引入XML配置  
+如果必须使用XML配置文件，建议依然以`@Configuration`开始，并在类上添加`@ImportResource`注解来加载XML配置文件。  
 
 ## 三、自动配置
 + SpringBoot的自动配置会尝试根据已添加的jar依赖自动配置Spring应用。  
@@ -134,7 +134,8 @@ dependencies {
   通过`spring.autoconfigure.exclude`设置排除自动配置的类。
 
 ## 四、开发者工具  
-添加`spring-boot-devtools`模块:  
+SpringBoot提供了一系列工具以确保开发过程稍微舒适一些。在项目中导入`spring-boot-devtools`模块可以提供额外的开发特性:  
++ Maven支持
 ```xml
 <dependency>
     <groupId>org.springframework.boot</groupId>
@@ -142,4 +143,16 @@ dependencies {
     <scope>runtime</scope>
     <optional>true</optional>
 </dependency>
+```
++ Gradle支持
+```java
+configurations {
+  developmentOnly
+  runtimeClasspath {
+    extendsFrom developmentOnly
+  }
+}
+dependencies {
+  developmentOnly("org.springframework.boot:spring-boot-devtools")
+}
 ```
