--- a/Spring/SpringBoot/01.SpringBoot基础.md
+++ b/Spring/SpringBoot/01.SpringBoot基础.md
@@ -156,3 +156,123 @@ dependencies {
   developmentOnly("org.springframework.boot:spring-boot-devtools")
 }
 ```
+
+> 开发者工具在运行完整的打包程序时是自动禁止的。如果应用是通过`java -jar`启动或通过指定类加载器启动，那么它就被视作是生产应用。如果这在应用中不适用，可考虑排除`spring-boot-devtools`模块或设置`-Dspring.devtools.restart.enabled=false`。  
+
+### 1. 默认属性值
+SpringBoot支持的一些库会使用缓存来提升表现。比如SpringMVC在提供静态内容时会添加HTTP缓存头。虽然缓存在实际生产中有益，但在开发过程中却适得其反：它会阻止应用中变动的观察。因此，`spring-boot-devtools`默认的会禁止缓存选项。  
+缓存通常是在`application.properties`中配置的，比如Thymeleaf提供的`spring.thymeleaf.cache`属性。无需手动配置，`spring-boot-devtools`模块会自动地提供开发期间的有效配置。  
+由于在开发SpringMVC和SpringWebFlux应用期间需要更多的关于web请求的内容，`spring-boot-devtools`会启动`web`日志组的`DEBUG`级别。这会展示进入的请求的内容，比如哪个处理器处理、返回的响应等。如果想要更多的消息（包括可能的敏感消息），可以开启`spring.http.log-request-details`配置项。  
+
+> 如果不想要使用默认配置属性，可在`application.properties`中设置`spring.devtools.add-properties`为`false`。`DevToolsPropertyDefaultsPostProcessor`中列举了devtools使用的完整的默认属性列表。  
+
+### 2. 自动重启
+使用`spring-boot-devtools`的应用会在类路径下的文件变化时自动重启。默认地，在类路径下的所有指向文件夹的实体的修改都会被监视到。需要注意到，类似于静态资源和视图等是不需要修改的。  
+
+> DevTools在重启时会依赖上下文的关闭hook，如果关闭了这个配置(`SpringApplication.setRegisterShutdownHook(false)`)则DevTools会无法正常工作。  
+> DevTools需要使用自定义上下文使用到的`ResourceLoader`。如果已经定义了一个`ResourceLoader`，那么它会被包装起来，无法直接使用`ApplicationContext`的`getResource`。  
+
+> SpringBoot的重启技术是使用了两个类加载器。不变的类（如来自第三方库的类）会加载到一个`base`类加载器中，而开发中的类会加载到一个`restart`类加载器。当应用重启时，`restart`类加载器会被抛弃并重新创建一个新的`restart`类加载器。这种方式会比冷启动快，因为`base`类加载器会保持可用并向下传播。
+
+#### 2.1 打印日志报告
+默认地，应用每次重启都会打印日志报告，报告展示了因添加或删除bean、设置配置属性等导致的应用自动配置的变更。如果不想要打印日志报告，可配置：  
+```
+spring.devtools.restart.log-condition-evaluation-delta=false
+```
+
+#### 2.2 排除资源
+有些资源的变动并不需要触发重启。比如，Thymeleaf模板可以随时变动。默认地，`/META-INF/maven`, `/META-INF/resources`, `/resources`, `/static`, `/public`或`/templates`是不会触发重启的，但是会触发实时加载。通过`spring.devtools.restart.exclude`可覆盖默认的排除配置：  
+```
+spring.devtools.restart.exclude=static/**,public/**
+```
+
+> 如果需要保持默认的排除配置并新增额外的排除路径，可配置`spring.devtools.restart.additional-exclude`。  
+ 
+#### 2.3 监控其他路径
+可能有些不在类路径下的文件的修改也需要触发应用的重启或重新加载。可以通过`spring.devtools.restart.additional-paths`属性配置额外的监控路径。配合之前提供的`spring.devtools.restart.exclude`可配置额外的监控路径是触发重启或重新加载。  
+
+#### 2.4 禁止重启
+如果不需要使用重启功能，可通过`spring.devtools.restart.enabled`属性来禁止它。大多数情况下，可在`application.properties`文件中配置这个属性，这样依然会初始化`restart`类加载器但不会监控文件的变化。  
+如果想要完全地禁掉重启支持，需要在调用`SpringApplication.run(...)`前设置系统属性`spring.devtools.restart.enabled`为`false`，如：  
+```java
+public static void main(String[] args) {
+  System.setProperty("spring.devtools.restart.enabled", "false");
+  SpringApplication.run(MyApp.class, args);
+}
+```
+
+#### 2.5 使用触发文件
+如果在一个会不断编译变更文件的IDE中开发，可能期望只在指定时间触发重启。可以使用触发文件来实现，这个文件的任何改动会触发重启检查，仅当Devtools发现必要时才会触发实际的重启。将`spring.devtools.restart.trigger-file`属性设置为触发文件的文件名（不要包含任何路径信息）。触发文件必须位于应用的类路径下的某个位置。  
+> 将`spring.devtools.restart.trigger-file`设置为全局属性，可在所有的应用中使用相同的行为。
+
+#### 2.6 自定义启动类加载器
+SpringBoot的重启机制是通过使用两个类加载器实现的。对大多数的应用，这种方式是有效的。但是，有时这也会导致类加载问题。  
+默认地，IDE中打开的项目会通过`restart`类加载器加载，而`.jar`文件会通过`base`类加载器加载。如果在多模块的项目中且不是所有项目都导入到IDE中，可能需要配置一个`META-INF/spring-devtools.properties`文件，文件中包含`restart.exclude`和`restart.include`前缀的属性。`include`元素中的项需要加载到`restart`类加载器中，而`exclude`元素中的项是放入到`base`类加载器中的。属性的值是用于类路径的正则表达式，如：  
+```
+restart.exclude.companycommonlibs=/mycorp-common-[\\w\\d-\.]+\.jar
+restart.include.projectcommon=/mycorp-myproj-[\\w\\d-\.]+\.jar
+```
+
+> 所有的属性名称必须是唯一的，只要以`restart.exclude`和`restart.include`为前缀就可以。  
+> 类路径下的所有`META-INF/spring-devtools.properties`都会被加载，无论这个文件是在项目的类路径下，还是在项目使用到的jar包中的类路径下。  
+
+#### 2.7 已知限制
+重启机制无法很好地处理用`ObjectInputStream`反序列化的类。如果需要使用反序列化数据，建议使用Spring的`ConfigurableObjectInputStream`并配合`Thread.currentThread().getContextClassLoader()`。  
+
+### 3. 自动刷新
+`spring-boot-devtools`模块包含了一个内置的自动刷新服务器，它可在资源变更时触发浏览器自动刷新。通过`spring.devtools.livereload.enabled`设置为`false`可禁掉。
+
+### 4. 全局设定
+可在`$HOME`目录中添加`.spring-boot-devtools.properties`文件来配置全局的DevTools。添加到该文件中的配置会在这台机器上的所有使用devtools的SpringBoot应用中生效。  
+
+### 5. 远程应用
+SpringBoot的开发者工具并不仅限于本地开发，运行远程应用时也可以使用某些特性。远程支持是可选的，启用这个功能需要确保`devtools`也会被打包到包文件中，如：  
+```xml
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-maven-plugin</artifactId>
+      <configuration>
+        <excludeDevtools>false</excludeDevtools>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+```
+然后需要设置`spring.devtools.remote.secret`，如：  
+```
+spring.devtools.remote.secret=mysecret
+```
+
+远程开发工具支持包含两部分：接收连接的服务端端点和在IDE中运行的客户端应用。设置`spring.devtools.remote.secret`后，服务端会自动启用。客户端必须手动触发。  
+
+#### 5.1 运行远程服务的客户端程序
+远程服务的客户端应用是用于在IDE中运行的，需要在于连接的远程应用相同的类路径下运行`org.springframework.boot.devtools.RemoteSpringApplication`，该应用唯一需要的参数是远程连接的URL。  
+> 如果远程服务需要使用代理，配置`spring.devtools.remote.proxy.host`和`spring.devtools.remote.proxy.port`属性。  
+
+#### 5.2 远程更新
+远程客户端会像本地一样监视应用的类路径的变更。任何变更的资源都会被推送到远程应用并触发重启。通常，远程更新和重启会比完整的重新构建和发布要快的多。  
+
+#### 5.3 配置`FileSystemWatcher`
+`FileSystemWatcher`会按照某个时间间隔调查类是否变更，然后等待一个约定的静默期以判断未发生其他变更。变更会上传到远程应用。在一个较慢的开发环境中，可能发生静默期时间不足，导致类的变更被分成多个批次。服务器在收到第一个批次的变更后重启，而第二个批次因重启未成功上传。这一般会导致打印上传失败的日志及一系列的重试。但也可能导致因代码的不一致而无法重启成功。  
+如果发现一直出现上述问题，尝试增加`spring.devtools.restart.poll-interval`和`spring.devtools.restart.quiet-period`来适配开发环境：  
+```
+spring.devtools.restart.poll-interval=2s
+spring.devtools.restart.quiet-period=1s
+```
+
+#### 5.4 远程开发工具的安全配置
+如果应用中配置了SpringSecurity，`RemoteSpringApplication`的日志可能会打印401或403的HTTP错误，用于类上传的URL应该从web安全和crsf过滤器中排除，如：  
+```java
+@Configuration
+public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
+
+  @Override
+  protected void configure(HttpSecurity http) throws Exception {
+    http.requestMatchers("/.~~spring-boot!~/restart").anyRequest().anonymous()
+      .and().csrf().disable();
+  }
+
+}
+```
