--- a/Spring/SpringCloud/01.云原生应用.md
+++ b/Spring/SpringCloud/01.云原生应用.md
@@ -76,14 +76,31 @@ org.springframework.cloud.bootstrap.BootstrapConfiguration=sample.custom.CustomP
 值得注意的是，`Spring Cloud Config Client`默认不会拉取`Environment`中的变更，虽然可以通过`@Scheduled`注解配置定期拉取，但是这不值得推荐。对于横向扩展的应用来说，最好的方式还是通过广播的方式传递`EnvironmentChangeEvent`事件到所有的实例，而不是让实例自己拉取变更。  
 只要确实修改了`Environment`并发布`EnvironmentChangeEvent`事件，则这个事件可以覆盖到大量刷新用例的类。通过访问`/configprops`端点，可以声明绑定到`@ConfigurationProperties`的bean的变更。比如，`DataSource`可以在运行期修改`maxPoolSize`属性并扩容（默认的`DataSource`是通过SpringBoot的`@CofigurationProperties`bean创建的）。重新绑定`@ConfigurationProperties`不会覆盖到的用例需要更多的刷新控制和整个`ApplicationContext`的原子更新。为了解决这个问题，可以使用`@RefreshScope`。  
 
-## 1.9 Refresh Scope
+### 1.9 Refresh Scope
 当配置发生变更，Spring中标记了`@RefreshScope`的`@Bean`会被特殊处理。这个特性解决了有状态的bean仅在初始化时获取被注入配置的问题。比如，如果一个数据源`DataSource`已经打开了一些连接，然后通过`Environment`修改了数据库的URL，我们会期望这些已经打开的数据库连接的持有者能够完成当前的工作，之后获取的数据库连接会对应新的URL。  
 
 对于那些仅初始化一次的bean，必须使用可能`@RefreshScope`注解。如果一个bean是**不可变**的，那么这个bean要么需要注解`@RefreshScope`或在`spring.cloud.refresh.extra-refreashable`中配置对应的类名称。  
 
+RefreshScope的bean在被使用时才会初始化，且会使用已初始化值的缓存。为了强制bean在下次方法调用时重新初始化，必须使缓存项无效。  
+`RefreshScope`是应用上下文中的一个bean，且有一个公共的`refreshAll()`方法用于清空目标缓存并刷新范围内的所有bean。`refresh`端点暴露了这个功能（通过http或JMX）。通过`refresh(String)`方法也可以按照名称刷新单个bean。为了暴露`/refresh`端点，需要在应用中添加如下配置：  
+```yaml
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
+```
+> 技术上说，`@RefreshScope`也是可以在`@Configuration`类上生效的，但是可能会导致一些意想不到的结果。比如，这不意味着类中定义所有的`@Bean`与`@RefreshScope`中的bean是同一个。
 
+### 1.10 编码与解码
+Spring Cloud有一个预处理器用于将`Environment`中的属性值进行解码。这个预处理器遵循了SpringConfigServer的规则，并有相同的`encrypt.*`外部配置。因此，通过`{cipher}*`形式编码属性值，且只要秘钥有效，这些属性值会在主应用上下文获取`Environment`前解码。为了使用编码特性，在应用的类路径下应包含SpringSecurityRSA（Maven坐标：`org.springframework.security:spring-security-rsa`），且需要在JVM中替换完整长度的 JCE。
 
-
+### 1.11 端点
+SpringBootActuator应用有一些额外的管理端点，可用的包括：  
++ `/actuator/env`：POST方法，用于更新`Environment`并重新绑定`@ConfigurationProperties`和日志等级
++ `/actuator/refresh`：重新加载bootstrap上下文并刷新`@RefreshScope`的bean
++ `/actuator/restart`：关闭并重启`ApplicationContext`（该端点默认无效）。
++ `/actuator/pause`和`/actuator/resume`：调用`ApplicationContext`的`stop()`和`start()`。  
 
 
 
